# erudit

./: .gitignore  README.md  pyproject.toml
erudit/: __init__.py  action.py  feedback.py  observation.py
erudit/control/: monte_carlo_control.py  sarsa.py
erudit/environment/: environment.py
erudit/environment/examples/: frozen_lake.py
erudit/evaluation/: monte_carlo_prediction.py  temporal_difference.py
erudit/space/: space.py
erudit/strategy/: pure_exploitation.py
erudit/utils/: __init__.py  decay_schedule.py  generate_trajectory.py
examples/: frozen_lake_1.py  frozen_lake_2.py  frozen_lake_3.py
tests/: test_erudit.py
tests/utils/: decay_schedule.py
