[tool.poetry]
name = "erudit"
version = "0.1.0"
description = ""
authors = ["Hugues Gaillard <hugues.gaillard@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
